--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,16 @@
 
 <body>
   <div class="container">
-    <div class="child box"></div>
-    <div class="child vinile">
-      <div class="label">
-        <div class="center">
-
+    <div class="page">
+      <div class="child cover"></div>
+      <div class="child vinyl">
+        <div class="label">
+          <div class="hole"></div>
         </div>
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
