--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
   
   
   <script type="module" crossorigin src="/cover-css/index.c52fd185.js"></script>
-  <link rel="stylesheet" href="/cover-css/index.9712d0db.css">
+  <link rel="stylesheet" href="/cover-css/index.8e32d548.css">
 </head>
 
 <body>
   <div class="container">
-    <div class="child box"></div>
-    <div class="child vinile">
-      <div class="label">
-        <div class="center">
-
+    <div class="page">
+      <div class="child cover"></div>
+      <div class="child vinyl">
+        <div class="label">
+          <div class="hole"></div>
         </div>
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
